--- a/DentalHospitalDatabase/New Patient.xaml
+++ b/DentalHospitalDatabase/New Patient.xaml
@@ -7,9 +7,23 @@
         mc:Ignorable="d"
         Title="New_Patient" Height="450" Width="800">
     <Grid>
-        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="10,359,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
+        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="200,350,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
         <Label x:Name="lblNewPatient" Content="New Patients" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="52" Width="204" FontSize="30" FontWeight="Bold"/>
-        <Button Content="New Appointment" HorizontalAlignment="Left" Margin="597,359,0,0" VerticalAlignment="Top" Width="185" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold"/>
+        <Button Content="New Appointment" HorizontalAlignment="Left" Margin="415,350,0,0" VerticalAlignment="Top" Width="185" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold"/>
+        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="30" Margin="120,80,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
+        <TextBox x:Name= "txtLAstName" HorizontalAlignment="Left" Height="30" Margin="120,115,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
+        <TextBox x:Name="txtDOB" HorizontalAlignment="Left" Height="30" Margin="120,185,0,0" TextWrapping="Wrap" Text="Date of Birth" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
+        <TextBox x:Name="txtGender" HorizontalAlignment="Left" Height="30" Margin="120,220,0,0" TextWrapping="Wrap" Text="Gender" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
+        <TextBox x:Name="txtSSN" HorizontalAlignment="Left" Height="30" Margin="120,255,0,0" TextWrapping="Wrap" Text="Social Security" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
+        <TextBox x:Name="txtAddress" HorizontalAlignment="Left" Height="30" Margin="120,290,0,0" TextWrapping="Wrap" Text="Address" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
+        <TextBox x:Name="txtMiddleInitial" HorizontalAlignment="Left" Height="30" Margin="120,150,0,0" TextWrapping="Wrap" Text="Middle Initial" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
+        <TextBox x:Name="txtFNInput" HorizontalAlignment="Left" Height="30" Margin="295,80,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtLNInput" HorizontalAlignment="Left" Height="30" Margin="295,115,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtMIInput" HorizontalAlignment="Left" Height="30" Margin="295,150,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtDOBInput" HorizontalAlignment="Left" Height="30" Margin="295,185,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtGenderInput" HorizontalAlignment="Left" Height="30" Margin="295,220,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtSSNInput" HorizontalAlignment="Left" Height="30" Margin="295,255,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtAddressInput" HorizontalAlignment="Left" Height="30" Margin="295,290,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
 
     </Grid>
 </Window>
