--- a/DentalHospitalDatabase/New Patient.xaml
+++ b/DentalHospitalDatabase/New Patient.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
         Title="New_Patient" Height="450" Width="800">
-    <Grid>
+    <Grid Background="#FF53BDF0">
         <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="200,350,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
         <Label x:Name="lblNewPatient" Content="New Patients" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="52" Width="204" FontSize="30" FontWeight="Bold"/>
         <Button Content="New Appointment" HorizontalAlignment="Left" Margin="415,350,0,0" VerticalAlignment="Top" Width="185" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold"/>
