--- a/DentalHospitalDatabase/App.xaml
+++ b/DentalHospitalDatabase/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DentalHospitalDatabase"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Login Screen.xaml">
     <Application.Resources>
          
     </Application.Resources>
