--- a/DentalHospitalDatabase/New Patient.xaml
+++ b/DentalHospitalDatabase/New Patient.xaml
@@ -8,7 +8,7 @@
         Title="New_Patient" Height="450" Width="800">
     <Grid Background="#FF53BDF0">
         <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="200,350,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
-        <Label x:Name="lblNewPatient" Content="New Patients" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="52" Width="204" FontSize="30" FontWeight="Bold"/>
+        <Label x:Name="lblNewPatient" Content="New Patient" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="52" Width="204" FontSize="30" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Button Content="New Appointment" HorizontalAlignment="Left" Margin="415,350,0,0" VerticalAlignment="Top" Width="185" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold"/>
         <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="30" Margin="120,80,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
         <TextBox x:Name= "txtLAstName" HorizontalAlignment="Left" Height="30" Margin="120,115,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
