--- a/DentalHospitalDatabase/CreateAppt.xaml
+++ b/DentalHospitalDatabase/CreateAppt.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="DentalHospitalDatabase.CreateAppt"
+﻿<Window x:Name="WinCreate" x:Class="DentalHospitalDatabase.CreateAppt"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
-        Title="CreateAppt" Height="450" Width="800">
-    <Grid Background="#FF53BDF0">
+        Title="CreateAppt" Height="450" Width="800" MouseDown="WinCreate_MouseDown">
+    <Grid Name="grid2" Focusable="True"  Background="#FF53BDF0">
         <Button x:Name="btnReturnHome" Content="Return Home" HorizontalAlignment="Left" Margin="163,335,0,0" VerticalAlignment="Top" Width="228" Height="50" FontWeight="Bold" FontSize="20" Click="btnReturnHome_Click"/>
         <Label x:Name="lblCreateAppt" Content="Create Appointment" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center"/>
         <Button x:Name="btnCreateAppt" Content="Create Appointment" HorizontalAlignment="Center" Margin="395,335,170,0" VerticalAlignment="Top" Width="227" FontSize="20" FontWeight="Bold" Height="50" Click="btnCreateAppt_Click"/>
@@ -16,9 +16,9 @@
         <TextBox x:Name="txtDocName" HorizontalAlignment="Left" Height="30" Margin="120,185,0,0" TextWrapping="Wrap" Text="Doctor Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
         <TextBox x:Name="txtAppDate" HorizontalAlignment="Left" Height="30" Margin="120,220,0,0" TextWrapping="Wrap" Text="Appointment Date" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
         <TextBox x:Name="txtAppTime" HorizontalAlignment="Left" Height="30" Margin="120,255,0,0" TextWrapping="Wrap" Text="Appointment Time" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtFNameInput" HorizontalAlignment="Left" Height="30" Margin="295,80,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtLNameInput" HorizontalAlignment="Left" Height="30" Margin="295,115,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtMInitialInput" HorizontalAlignment="Left" Height="30" Margin="295,150,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtFNameInput" HorizontalAlignment="Left" Height="30" Margin="295,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtLNameInput" HorizontalAlignment="Left" Height="30" Margin="295,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtMInitialInput" HorizontalAlignment="Left" Height="30" Margin="295,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
         <ComboBox x:Name="cmbDocName" HorizontalAlignment="Left" Margin="295,185,0,0" VerticalAlignment="Top" Width="360" Height="30" IsReadOnly="True"/>
         <DatePicker x:Name="dpAppDate" HorizontalAlignment="Left" Margin="295,220,0,0" VerticalAlignment="Top" Height="30" Width="360"/>
         <ComboBox x:Name="cmbAppTime" HorizontalAlignment="Left" Margin="295,255,0,0" VerticalAlignment="Top" Width="360" Height="30">
