--- a/DentalHospitalDatabase/Login Screen.xaml
+++ b/DentalHospitalDatabase/Login Screen.xaml
@@ -1,19 +1,26 @@
-﻿<Window x:Class="DentalHospitalDatabase.Login_Screen"
+﻿<Window x:Name="winLogin" x:Class="DentalHospitalDatabase.Login_Screen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
-        Title="Login_Screen" Height="450" Width="800">
-    <Grid Background="#FF53BDF0">
-        <Label Content="Login" HorizontalAlignment="Left" Margin="350,10,0,0" VerticalAlignment="Top" Width="100" FontSize="30" FontFamily="Segoe UI Black" FontWeight="Bold"/>
-        <TextBox x:Name="txtUserName" HorizontalAlignment="Left" Height="30" Margin="120,149,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="170" Background="#FFDDDDDD" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox x:Name="txtPassword" HorizontalAlignment="Left" Height="30" Margin="120,203,0,0" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top" Width="170" Background="#FFDDDDDD" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox x:Name="txtUNInput" HorizontalAlignment="Left" Height="30" Margin="295,149,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtPassInput" HorizontalAlignment="Left" Height="30" Margin="295,203,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <Button x:Name="btnLogin" Content="Login" HorizontalAlignment="Left" Margin="200,337,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="24" FontFamily="Segoe UI Black" Click="btnLogin_Click"/>
-        <Button x:Name="btnClearFields" Content="Clear Fields" HorizontalAlignment="Left" Margin="415,337,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="24" FontFamily="Segoe UI Black" Click="Button_Click"/>
+        Title="Login_Screen" Height="450" Width="800" ResizeMode="NoResize" MouseDown="WinLogin_MouseDown">
+    <Grid x:Name="grid1" Focusable="True" Background="#FF53BDF0" Margin="-1,0,0.6,0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="228*"/>
+            <ColumnDefinition Width="475*"/>
+            <ColumnDefinition Width="91*"/>
+        </Grid.ColumnDefinitions>
+        <Label Content="Login" HorizontalAlignment="Left" Margin="105.267,57,0,0" VerticalAlignment="Top" Width="100" FontSize="30" FontFamily="Segoe UI Black" FontWeight="Bold" Grid.Column="1"/>
+        <TextBox x:Name="txtUserName" IsReadOnly="True" HorizontalAlignment="Left" Height="30" Margin="120,149,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="170" Background="#FFDDDDDD" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtPassword" IsReadOnly="True" HorizontalAlignment="Left" Height="30" Margin="120,203,0,0" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top" Width="170" Background="#FFDDDDDD" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtUNInput" HorizontalAlignment="Left" Height="30" Margin="67.267,149,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360" TextChanged="TxtUNInput_TextChanged" Grid.Column="1" FontSize="14" />
+        <TextBox x:Name="txtPWInput" HorizontalAlignment="Left" Height="30" Margin="67,203,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360" TextChanged="TxtPassInput_TextChanged" Grid.Column="1" FontSize="14" TextAlignment="Justify"/>
+        <TextBlock HorizontalAlignment="Left"  Height="24" Margin="72,209,0,0" VerticalAlignment="Top" Text="Enter Password" Foreground="Gray" x:Name="txtLabelPass" Width="85" Grid.Column="1"/>
+        <TextBlock HorizontalAlignment="Left" Margin="72,149,0,0" Text="Enter Username" Foreground="Gray" x:Name="txtLabelUser" Width="85" Grid.Column="1" VerticalAlignment="Top" Height="23"/>
+        <Button x:Name="btnLogin" Content="Login" HorizontalAlignment="Left" Margin="200,337,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="24" FontFamily="Segoe UI Black" Click="btnLogin_Click" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnClearFields" Content="Clear Fields" HorizontalAlignment="Left" Margin="187.267,337,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="24" FontFamily="Segoe UI Black" Click="Button_Click" Grid.Column="1"/>
 
     </Grid>
 </Window>
