--- a/DentalHospitalDatabase/New Patient.xaml
+++ b/DentalHospitalDatabase/New Patient.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="DentalHospitalDatabase.New_Patient"
+﻿<Window x:Name="winNewPatient" x:Class="DentalHospitalDatabase.New_Patient"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
-        Title="New_Patient" Height="450" Width="800">
-    <Grid Background="#FF53BDF0">
+        Title="New_Patient" Height="450" Width="800" MouseDown="WinNewPatient_MouseDown">
+    <Grid Name="grid3" Background="#FF53BDF0" Focusable="True">
         <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="200,350,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
         <Label x:Name="lblNewPatient" Content="New Patient" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="52" Width="204" FontSize="30" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Button Content="New Appointment" HorizontalAlignment="Left" Margin="415,350,0,0" VerticalAlignment="Top" Width="185" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold"/>
@@ -17,13 +17,13 @@
         <TextBox x:Name="txtSSN" HorizontalAlignment="Left" Height="30" Margin="120,255,0,0" TextWrapping="Wrap" Text="Social Security" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
         <TextBox x:Name="txtAddress" HorizontalAlignment="Left" Height="30" Margin="120,290,0,0" TextWrapping="Wrap" Text="Address" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
         <TextBox x:Name="txtMiddleInitial" HorizontalAlignment="Left" Height="30" Margin="120,150,0,0" TextWrapping="Wrap" Text="Middle Initial" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtFNInput" HorizontalAlignment="Left" Height="30" Margin="295,80,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtLNInput" HorizontalAlignment="Left" Height="30" Margin="295,115,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtMIInput" HorizontalAlignment="Left" Height="30" Margin="295,150,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtDOBInput" HorizontalAlignment="Left" Height="30" Margin="295,185,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtGenderInput" HorizontalAlignment="Left" Height="30" Margin="295,220,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtSSNInput" HorizontalAlignment="Left" Height="30" Margin="295,255,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtAddressInput" HorizontalAlignment="Left" Height="30" Margin="295,290,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtFNInput" HorizontalAlignment="Left" Height="30" Margin="295,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtLNInput" HorizontalAlignment="Left" Height="30" Margin="295,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtMIInput" HorizontalAlignment="Left" Height="30" Margin="295,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtDOBInput" HorizontalAlignment="Left" Height="30" Margin="295,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtGenderInput" HorizontalAlignment="Left" Height="30" Margin="295,220,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtSSNInput" HorizontalAlignment="Left" Height="30" Margin="295,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtAddressInput" HorizontalAlignment="Left" Height="30" Margin="295,290,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
 
     </Grid>
 </Window>
