--- a/DentalHospitalDatabase/CreateAppt.xaml
+++ b/DentalHospitalDatabase/CreateAppt.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
-        Title="CreateAppt" Height="450" Width="800" MouseDown="WinCreate_MouseDown">
-    <Grid Name="grid2" Focusable="True"  Background="#FF53BDF0">
+        Title="Hospital of Health - CreateAppt" Height="450" Width="800" MouseDown="WinCreate_MouseDown">
+    <Grid Name="grid2" Focusable="True"  Background="#FFBEEAFF">
         <Button x:Name="btnReturnHome" Content="Return Home" HorizontalAlignment="Left" Margin="163,335,0,0" VerticalAlignment="Top" Width="228" Height="50" FontWeight="Bold" FontSize="20" Click="btnReturnHome_Click"/>
         <Label x:Name="lblCreateAppt" Content="Create Appointment" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center"/>
         <Button x:Name="btnCreateAppt" Content="Create Appointment" HorizontalAlignment="Center" Margin="395,335,170,0" VerticalAlignment="Top" Width="227" FontSize="20" FontWeight="Bold" Height="50" Click="btnCreateAppt_Click"/>
