--- a/DentalHospitalDatabase/Dental.xaml
+++ b/DentalHospitalDatabase/Dental.xaml
@@ -5,12 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
-        Title="Dental" Height="450" Width="800">
-    <Grid Background="#FF53BDF0">
-        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="75,100,0,0" VerticalAlignment="Top" Width="200" Height="250" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
+        Title="Hospital of Health - Dental" Height="450" Width="800">
+    <Grid Background="#FFBEEAFF">
+        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="10,360,0,0" VerticalAlignment="Top" Width="150" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
         <Label x:Name="lblDental" Content="Dental" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold"/>
-        <Button x:Name="btnNewAppt" Content="New Appointment" HorizontalAlignment="Left" Margin="300,100,0,69" Width="200" Height="250" FontSize="20" FontWeight="Bold" Click="btnNewAppt_Click"/>
-        <Button x:Name="btnPayment" Content="Payment" HorizontalAlignment="Left" Margin="525,100,0,0" VerticalAlignment="Top" Width="200" Height="250" FontSize="20" FontWeight="Bold" Click="btnPayment_Click"/>
+        <Button x:Name="btnNewAppt" HorizontalAlignment="Left" VerticalAlignment="Top" Width="211" FontSize="20" Height="263" BorderBrush="Transparent"  Background="Transparent" FontWeight="Bold" Click="btnNewAppt_Click" Margin="134,70,0,0">
+            <StackPanel Orientation="Vertical" Width="211" Height="274">
+                <Image Source="/DentalHospitalDatabase;component/images/Appointment.png" Height="224" Margin="0,0,0.2,0"/>
+                <TextBlock TextWrapping="Wrap" Text="New Appointment" RenderTransformOrigin="0.255,0.051" Margin="10,0,0,0" Height="35" Width="180" HorizontalAlignment="Left"/>
+            </StackPanel>
+        </Button>
+        <Button x:Name="btnPayment" HorizontalAlignment="Left" Margin="429,57,0,0" VerticalAlignment="Top" Width="239" Height="276" FontSize="20" FontWeight="Bold" Click="btnPayment_Click">
+            <StackPanel Orientation="Vertical" Width="218">
+                <Image Source="/DentalHospitalDatabase;component/images/Money.png" Height="237" Margin="-15,0,-55.4,0"/>
+                <TextBlock TextWrapping="Wrap" Text="Payment" RenderTransformOrigin="0.255,0.051" Margin="63,0,50.6,0" Height="35" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+            </StackPanel>
+        </Button>
 
     </Grid>
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
+
+            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="FontSize" Value="20" />
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="Transparent">
+                            <Grid>
+                                <ContentPresenter x:Name="MyContentPresenter"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" />
+                            </Grid>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+    </Window.Resources>
 </Window>
