--- a/DentalHospitalDatabase/MainWindow.xaml
+++ b/DentalHospitalDatabase/MainWindow.xaml
@@ -6,10 +6,43 @@
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid Background="#FF53BDF0">
-        <Button x:Name="btnDentalCheck" Content="Dental Check-In" HorizontalAlignment="Left" Margin="75,100,0,0" VerticalAlignment="Top" Width="300" Height="250" FontSize="20" FontWeight="Bold" Click="btnDentalCheck_Click"/>
-        <Button x:Name="btnMedicalCheck" Content="Medical Check-in" HorizontalAlignment="Left" Margin="425,100,0,0" VerticalAlignment="Top" Width="300" Height="250" FontSize="20" FontWeight="Bold" Click="btnMedicalCheck_Click" Background="#FFDDDDDD"/>
-        <Label x:Name="lblWelcome" Content="Welcome To The Hospital of Health" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold"/>
+    
+    <Grid Background="#FFBEEAFF">
+        <Button x:Name="btnDentalCheck" Background="Transparent" Margin="81,102,412.6,54"  FontSize="20" FontWeight="Bold" BorderBrush="Transparent" Click="btnDentalCheck_Click" >
+            <StackPanel Orientation="Vertical" Width="277" Height="261">
+                <Image Source="/DentalHospitalDatabase;component/images/Dental.png" Height="219" Margin="0,0,-0.2,0"/>
+                <TextBlock TextWrapping="Wrap" Text="Dental Check-in" RenderTransformOrigin="0.255,0.051" Margin="63,0,50.8,0" Height="32" Width="163" VerticalAlignment="Center"/>
+            </StackPanel>
+        </Button>
+        <Button x:Name="btnMedicalCheck" HorizontalAlignment="Left" Margin="420,91,0,0" VerticalAlignment="Top" Width="306" Height="264" BorderBrush="Transparent" FontSize="20" FontWeight="Bold" Click="btnMedicalCheck_Click" Background="Transparent">
+            <StackPanel Orientation="Vertical" Width="316" Height="269">
+                <Image Source="/DentalHospitalDatabase;component/images/Medical.png" Height="230" />
+                <TextBlock TextWrapping="Wrap" Text="Medical Check-in" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+            </StackPanel>
+        </Button>
 
+
+        <Label x:Name="lblWelcome" Content="Welcome To The Hospital of Health" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold"/>
     </Grid>
+    
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
+
+            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="FontSize" Value="20" />
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="Transparent">
+                            <Grid>
+                                <ContentPresenter x:Name="MyContentPresenter"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" />
+                            </Grid>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+    </Window.Resources>
 </Window>
