--- a/DentalHospitalDatabase/New Patient.xaml
+++ b/DentalHospitalDatabase/New Patient.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
-        Title="New_Patient" Height="450" Width="800" MouseDown="WinNewPatient_MouseDown">
-    <Grid Name="grid3" Background="#FF53BDF0" Focusable="True">
+        Title="Hospital of Health - New_Patient" Height="450" Width="800" MouseDown="WinNewPatient_MouseDown">
+    <Grid Name="grid3" Background="#FFBEEAFF" Focusable="True">
         <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="200,350,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
         <Label x:Name="lblNewPatient" Content="New Patient" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="52" Width="204" FontSize="30" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Button Content="New Appointment" HorizontalAlignment="Left" Margin="415,350,0,0" VerticalAlignment="Top" Width="185" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold"/>
@@ -26,4 +26,5 @@
         <TextBox x:Name="txtAddressInput" HorizontalAlignment="Left" Height="30" Margin="295,290,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
 
     </Grid>
+    
 </Window>
