--- a/DentalHospitalDatabase/Payment.xaml
+++ b/DentalHospitalDatabase/Payment.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
-        Title="Payment" Height="450" Width="800">
-    <Grid Background="#FF53BDF0">
+        Title="Hospital of Health - Payment" Height="450" Width="800">
+    <Grid Background="#FFBEEAFF">
         <Label x:Name="lblPayment" Content="Payments" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold"/>
         <Button x:Name="btnReturnHome" Content="Return Home" HorizontalAlignment="Left" Margin="10,359,0,0" VerticalAlignment="Top" Width="184" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturnHome_Click"/>
         <Button x:Name="btnCompleteInfo" Content="Complete" HorizontalAlignment="Center" Margin="304,359,304,0" VerticalAlignment="Top" Width="184" FontSize="20" Height="50" FontWeight="Bold" Click="btnCompleteInfo_Click"/>
