--- a/DentalHospitalDatabase/CreateAppt.xaml
+++ b/DentalHospitalDatabase/CreateAppt.xaml
@@ -7,21 +7,21 @@
         mc:Ignorable="d"
         Title="Hospital of Health - CreateAppt" Height="450" Width="800" MouseDown="WinCreate_MouseDown">
     <Grid Name="grid2" Focusable="True"  Background="#FFBEEAFF">
-        <Button x:Name="btnReturnHome" Content="Return Home" HorizontalAlignment="Left" Margin="163,335,0,0" VerticalAlignment="Top" Width="228" Height="50" FontWeight="Bold" FontSize="20" Click="btnReturnHome_Click"/>
+        <Button x:Name="btnReturnHome" Content="Return Home" HorizontalAlignment="Left" Margin="10,359,0,0" VerticalAlignment="Top" Background="Transparent" Width="158" Height="43" FontWeight="Bold" FontSize="20" Click="btnReturnHome_Click" BorderBrush="#FF2363D0" BorderThickness="1"/>
         <Label x:Name="lblCreateAppt" Content="Create Appointment" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center"/>
-        <Button x:Name="btnCreateAppt" Content="Create Appointment" HorizontalAlignment="Center" Margin="395,335,170,0" VerticalAlignment="Top" Width="227" FontSize="20" FontWeight="Bold" Height="50" Click="btnCreateAppt_Click"/>
-        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="30" Margin="120,80,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtLastName" HorizontalAlignment="Left" Height="30" Margin="120,115,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtMiddleInitial" HorizontalAlignment="Left" Height="30" Margin="120,150,0,0" TextWrapping="Wrap" Text="Middle Initial" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtDocName" HorizontalAlignment="Left" Height="30" Margin="120,185,0,0" TextWrapping="Wrap" Text="Doctor Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtAppDate" HorizontalAlignment="Left" Height="30" Margin="120,220,0,0" TextWrapping="Wrap" Text="Appointment Date" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtAppTime" HorizontalAlignment="Left" Height="30" Margin="120,255,0,0" TextWrapping="Wrap" Text="Appointment Time" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtFNameInput" HorizontalAlignment="Left" Height="30" Margin="295,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtLNameInput" HorizontalAlignment="Left" Height="30" Margin="295,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtMInitialInput" HorizontalAlignment="Left" Height="30" Margin="295,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <ComboBox x:Name="cmbDocName" HorizontalAlignment="Left" Margin="295,185,0,0" VerticalAlignment="Top" Width="360" Height="30" IsReadOnly="True"/>
-        <DatePicker x:Name="dpAppDate" HorizontalAlignment="Left" Margin="295,220,0,0" VerticalAlignment="Top" Height="30" Width="360"/>
-        <ComboBox x:Name="cmbAppTime" HorizontalAlignment="Left" Margin="295,255,0,0" VerticalAlignment="Top" Width="360" Height="30">
+        <Button x:Name="btnCreateAppt" Content="Create Appointment"  HorizontalAlignment="Center" Margin="268,338,309.6,0" VerticalAlignment="Top" Width="216" FontSize="20" FontWeight="Bold" Height="50" Background="Transparent" BorderBrush="#FF2363D0" BorderThickness="1" Click="btnCreateAppt_Click"/>
+        <TextBox x:Name="txtFirstName" Height="30" Margin="141,80,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Width="127" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" HorizontalAlignment="Left" TextAlignment="Right"/>
+        <TextBox x:Name="txtLastName" HorizontalAlignment="Left" Height="30" Margin="141,115,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Width="127" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtMiddleInitial" HorizontalAlignment="Left" Height="30" Margin="141,150,0,0" TextWrapping="Wrap" Text="Middle Initial" VerticalAlignment="Top" Width="127" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtDocName" HorizontalAlignment="Left" Height="30" Margin="141,185,0,0" TextWrapping="Wrap" Text="Doctor Name" VerticalAlignment="Top" Width="127" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtAppDate" HorizontalAlignment="Left" Height="30" Margin="141,220,0,0" TextWrapping="Wrap" Text="Appointment Date" VerticalAlignment="Top" Width="127" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtAppTime" HorizontalAlignment="Left" Height="30" Margin="141,255,0,0" TextWrapping="Wrap" Text="Appointment Time" VerticalAlignment="Top" Width="127" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtFNameInput" HorizontalAlignment="Left" Height="30" Margin="268,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtLNameInput" HorizontalAlignment="Left" Height="30" Margin="268,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtMInitialInput" HorizontalAlignment="Left" Height="30" Margin="268,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <ComboBox x:Name="cmbDocName" HorizontalAlignment="Left" Margin="268,185,0,0" VerticalAlignment="Top" Width="360" Height="30" IsReadOnly="True"/>
+        <DatePicker x:Name="dpAppDate" HorizontalAlignment="Left" Margin="268,220,0,0" VerticalAlignment="Top" Height="30" Width="360"/>
+        <ComboBox x:Name="cmbAppTime" HorizontalAlignment="Left" Margin="268,255,0,0" VerticalAlignment="Top" Width="360" Height="30">
             <ComboBoxItem Content="0800"/>
             <ComboBoxItem Content="0830"/>
             <ComboBoxItem Content="0900"/>
@@ -44,4 +44,23 @@
         </ComboBox>
 
     </Grid>
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Transparent">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Transparent"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
 </Window>
