--- a/DentalHospitalDatabase/Medical.xaml
+++ b/DentalHospitalDatabase/Medical.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Hospital of Health - Medical" Height="450" Width="800">
     <Grid Background="#FFBEEAFF">
-        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="10,360,0,0" VerticalAlignment="Top" Width="150" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
+        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="10,359,0,0" VerticalAlignment="Top" Background="Transparent" Width="158" Height="43" FontWeight="Bold" FontSize="20" Click="btnReturn_Click" BorderBrush="#FF2363D0" BorderThickness="1"/>
         <Label x:Name="lblMedical" Content="Medical" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold"/>
         <Button x:Name="btnNewAppt" HorizontalAlignment="Left" VerticalAlignment="Top" Width="211" FontSize="20" Height="263" BorderBrush="Transparent"  Background="Transparent" FontWeight="Bold" Click="btnNewAppt_Click" Margin="134,71,0,0">
             <StackPanel Orientation="Vertical" Width="211" Height="274">
@@ -15,8 +15,7 @@
                 <TextBlock TextWrapping="Wrap" Text="New Appointment" RenderTransformOrigin="0.255,0.051" Margin="10,0,0,0" Height="35" Width="180" HorizontalAlignment="Left"/>
             </StackPanel>
         </Button>
-        
-        <Button x:Name="btnPayment" HorizontalAlignment="Left" Margin="429,57,0,0" VerticalAlignment="Top" Width="239" Height="276" FontSize="20" FontWeight="Bold" Click="btnPayment_Click">
+        <Button x:Name="btnPayment" HorizontalAlignment="Left" Margin="429,57,0,0" VerticalAlignment="Top" Width="239" Height="276" FontSize="20" FontWeight="Bold" Background="Transparent" BorderBrush="Transparent" Click="btnPayment_Click">
             <StackPanel Orientation="Vertical" Width="218">
                 <Image Source="/DentalHospitalDatabase;component/images/Money.png" Height="237" Margin="-15,0,-55.4,0"/>
                 <TextBlock TextWrapping="Wrap" Text="Payment" RenderTransformOrigin="0.255,0.051" Margin="63,0,50.6,0" Height="35" VerticalAlignment="Top" HorizontalAlignment="Center"/>
@@ -26,22 +25,21 @@
     </Grid>
     <Window.Resources>
         <Style TargetType="{x:Type Button}">
-
-            <Setter Property="Foreground" Value="Black" />
-            <Setter Property="FontSize" Value="20" />
-
+            <Setter Property="Background" Value="Transparent"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border Background="Transparent">
-                            <Grid>
-                                <ContentPresenter x:Name="MyContentPresenter"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" />
-                            </Grid>
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Transparent">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Transparent"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
-
     </Window.Resources>
 </Window>
