--- a/DentalHospitalDatabase/New Patient.xaml
+++ b/DentalHospitalDatabase/New Patient.xaml
@@ -7,24 +7,43 @@
         mc:Ignorable="d"
         Title="Hospital of Health - New_Patient" Height="450" Width="800" MouseDown="WinNewPatient_MouseDown">
     <Grid Name="grid3" Background="#FFBEEAFF" Focusable="True">
-        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="200,350,0,0" VerticalAlignment="Top" Width="185" Height="50" FontSize="20" FontWeight="Bold" Click="btnReturn_Click"/>
+        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="10,359,0,0" VerticalAlignment="Top" Background="Transparent" Width="158" Height="43" FontWeight="Bold" FontSize="20" Click="btnReturn_Click" BorderBrush="#FF2363D0" BorderThickness="1"/>
         <Label x:Name="lblNewPatient" Content="New Patient" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="52" Width="204" FontSize="30" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <Button Content="New Appointment" HorizontalAlignment="Left" Margin="415,350,0,0" VerticalAlignment="Top" Width="185" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold"/>
-        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="30" Margin="120,80,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name= "txtLAstName" HorizontalAlignment="Left" Height="30" Margin="120,115,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtDOB" HorizontalAlignment="Left" Height="30" Margin="120,185,0,0" TextWrapping="Wrap" Text="Date of Birth" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtGender" HorizontalAlignment="Left" Height="30" Margin="120,220,0,0" TextWrapping="Wrap" Text="Gender" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtSSN" HorizontalAlignment="Left" Height="30" Margin="120,255,0,0" TextWrapping="Wrap" Text="Social Security" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtAddress" HorizontalAlignment="Left" Height="30" Margin="120,290,0,0" TextWrapping="Wrap" Text="Address" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtMiddleInitial" HorizontalAlignment="Left" Height="30" Margin="120,150,0,0" TextWrapping="Wrap" Text="Middle Initial" VerticalAlignment="Top" Width="170" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FFDDDDDD" IsReadOnly="True"/>
-        <TextBox x:Name="txtFNInput" HorizontalAlignment="Left" Height="30" Margin="295,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtLNInput" HorizontalAlignment="Left" Height="30" Margin="295,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtMIInput" HorizontalAlignment="Left" Height="30" Margin="295,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtDOBInput" HorizontalAlignment="Left" Height="30" Margin="295,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtGenderInput" HorizontalAlignment="Left" Height="30" Margin="295,220,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtSSNInput" HorizontalAlignment="Left" Height="30" Margin="295,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtAddressInput" HorizontalAlignment="Left" Height="30" Margin="295,290,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <Button Content="New Appointment" HorizontalAlignment="Left" Margin="314,350,0,0" VerticalAlignment="Top" Width="195" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold" BorderBrush="#FF2363D0" BorderThickness="1" Background="Transparent"/>
+        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="30" Margin="120,80,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name= "txtLAstName" HorizontalAlignment="Left" Height="30" Margin="120,115,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtDOB" HorizontalAlignment="Left" Height="30" Margin="120,185,0,0" TextWrapping="Wrap" Text="Date of Birth" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtGender" HorizontalAlignment="Left" Height="30" Margin="120,220,0,0" TextWrapping="Wrap" Text="Gender" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtSSN" HorizontalAlignment="Left" Height="30" Margin="120,255,0,0" TextWrapping="Wrap" Text="Social Security" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtAddress" HorizontalAlignment="Left" Height="30" Margin="120,290,0,0" TextWrapping="Wrap" Text="Address" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtMiddleInitial" HorizontalAlignment="Left" Height="30" Margin="120,150,0,0" TextWrapping="Wrap" Text="Middle Initial" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtFNInput" HorizontalAlignment="Left" Height="30" Margin="255,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtLNInput" HorizontalAlignment="Left" Height="30" Margin="255,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtMIInput" HorizontalAlignment="Left" Height="30" Margin="255,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtDOBInput" HorizontalAlignment="Left" Height="30" Margin="255,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtGenderInput" HorizontalAlignment="Left" Height="30" Margin="255,220,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtSSNInput" HorizontalAlignment="Left" Height="30" Margin="255,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtAddressInput" HorizontalAlignment="Left" Height="30" Margin="255,290,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
 
     </Grid>
-    
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Transparent">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Transparent"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+
 </Window>
